structuration des fichiers

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,8 @@
 /Sources/Phenix-challenge/Phenix.Challenge.Domain/obj
 /Sources/Phenix-challenge/Phenix.Challenge.Domain/bin/Debug/netstandard2.0
 /Sources/Phenix-challenge/Phenix.Challenge.Console/bin/Debug/netcoreapp2.1
+/Sources/Phenix-challenge/Domain/Phenix.Challenge.Domain/obj/Debug/netstandard2.0
+/Sources/Phenix-challenge/Domain/Phenix.Challenge.Domain/bin/Debug/netstandard2.0
+/Sources/Phenix-challenge/Domain/Tests/Phenix.Challenge.Domain.Tests/bin/Debug/netcoreapp2.1
+/Sources/Phenix-challenge/Domain/Tests/Phenix.Challenge.Domain.Tests/obj
+/Sources/Phenix-challenge/Domain/Phenix.Challenge.Domain/obj
