--- a/Sources/Phenix-challenge/Domain/Tests/Phenix.Challenge.Domain.Tests/Phenix.Challenge.Domain.Tests.csproj
+++ b/Sources/Phenix-challenge/Domain/Tests/Phenix.Challenge.Domain.Tests/Phenix.Challenge.Domain.Tests.csproj
@@ -14,7 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Phenix.Challenge.Domain\Phenix.Challenge.Domain.csproj" />
+    <ProjectReference Include="..\..\Phenix.Challenge.Domain\Phenix.Challenge.Domain.csproj" />
   </ItemGroup>
 
 </Project>
