ajout RapportJournalier Tests

--- a/Sources/Phenix-challenge/Infrastructure/Phenix.Challenge.Infrastructure/Phenix.Challenge.Infrastructure.csproj
+++ b/Sources/Phenix-challenge/Infrastructure/Phenix.Challenge.Infrastructure/Phenix.Challenge.Infrastructure.csproj
@@ -5,6 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="StructureMap" Version="4.7.1" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\..\Domain\Phenix.Challenge.Domain\Phenix.Challenge.Domain.csproj" />
   </ItemGroup>
 
