ajout version hebdo

--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,4 @@
 /Sources/Phenix-challenge/Infrastructure/Tests/Infrastructure.Tests/obj
 /Sources/Phenix-challenge/Infrastructure/Tests/Infrastructure.Tests/bin/Debug/netcoreapp2.1
 /Sources/Phenix-challenge/Infrastructure/Phenix.Challenge.Infrastructure/obj
+/Sources/Phenix-challenge/Application/Phenix.Challenge.Application/obj
