fix parsing date

--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,4 @@
 /Sources/Phenix-challenge/Infrastructure/Tests/Infrastructure.Tests/bin/Debug/netcoreapp2.1
 /Sources/Phenix-challenge/Infrastructure/Phenix.Challenge.Infrastructure/obj
 /Sources/Phenix-challenge/Application/Phenix.Challenge.Application/obj
+/Sources/Phenix-challenge/Application/Phenix.Challenge.Application/bin/Debug/netstandard2.0
