--- a/Sources/Phenix-challenge/Phenix.Challenge.Console/Phenix.Challenge.Console.csproj
+++ b/Sources/Phenix-challenge/Phenix.Challenge.Console/Phenix.Challenge.Console.csproj
@@ -6,6 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Application\Phenix.Challenge.Application\Phenix.Challenge.Application.csproj" />
     <ProjectReference Include="..\Domain\Phenix.Challenge.Domain\Phenix.Challenge.Domain.csproj" />
     <ProjectReference Include="..\Infrastructure\Phenix.Challenge.Infrastructure\Phenix.Challenge.Infrastructure.csproj" />
   </ItemGroup>
